<resources>
    <string name="app_name">UserProfile</string>
    <string name="display_info">Display Info</string>
    <string name="registration_details">Your Registration Details</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="sex_details"></string>
    <string name="selected_sex">Female</string>
    <string name="entered_email">email@example.com</string>
    <string name="entered_phone">08080806042</string>
    <string name="entered_name">UserName</string>

    <!--Error messages-->
    <string name="no_name_entered">No name entered</string>
    <string name="no_email_entered">No email entered</string>
    <string name="invalid_phone_number">Invalid Number</string>
    <string name="all_field_empty">Details should not be empty</string>

    <string name="signature">kaytouch</string>


    <string-array name="sex">
        <item name="female">Female</item>
        <item name="male">Male</item>
    </string-array>
</resources>